--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -4,6 +4,10 @@
 @import "./helps/utilities";
 // sass 對應node_modules
 @import "~bootstrap";
+// swiper
+@import "~swiper/swiper.scss";
+@import "~swiper/components/navigation/navigation.min.css";
+@import "~swiper/components/thumbs/thumbs.min.css";
 // 自定義css
 @import "./components/layout";
 @import "./components/animation";
