--- a/src/assets/css/helps/_utilities.scss
+++ b/src/assets/css/helps/_utilities.scss
@@ -186,7 +186,7 @@ $utilities: map-merge(
     "min-viewport-height": (
       property: min-height,
       class: min-vh,
-      values: (100: 100vh)
+      values: (75: 75px,100: 100vh)
     ),
     // scss-docs-end utils-sizing
     // Flex utilities
