--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -11,4 +11,5 @@
 // 自定義css
 @import "./components/layout";
 @import "./components/animation";
+@import "./components/top";
 @import "./components/login";
