總之top上半部upload

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -12,4 +12,5 @@
 @import "./components/layout";
 @import "./components/animation";
 @import "./components/top";
+@import "./components/navtop";
 @import "./components/login";
