--- a/src/assets/css/components/_top.css
+++ b/src/assets/css/components/_top.css
@@ -1,7 +1,6 @@
 .top {
   background: url(../assets/images/mv01.jpg) 50% 20% no-repeat;
   background-size: cover;
-  height: 100vh;
 }
 
 .top__inner {
@@ -10,34 +9,53 @@
   left: var(--bs-gutter-x, 0.75rem);
   max-width: 450px;
   transform: translateY(-50%);
+  @include media-breakpoint-down(lg) {
+    max-width: 350px;
+  }
+  @include media-breakpoint-down(md) {
+    top: 65%;
+    max-width: 250px;
+  }
 }
 
 .top__title {
   font-size: 4rem;
   padding-right: 3rem;
   border-right: 2px solid #fff;
+  @include media-breakpoint-down(lg) {
+    padding-right: 2rem;
+    font-size: 3rem;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 2rem;
+  }
 }
 
 .top__subtitle {
 }
 
 .top-scrolldown {
-    position: absolute;
-    bottom: 50%;
-    right: 5%;
-    display: block;
-    padding-right: 180px;
-    overflow: hidden;
-    color: #fff;
-    font-weight: 700;
-    font-size: .6rem;
-    font-family: Montserrat, sans-serif;
-    line-height: 1.2;
-    transform: rotate(
-90deg
-) translate(140%, 0%);
-    transform-origin: top right;
-    letter-spacing: 0.3em;
+  position: absolute;
+  bottom: 3.38542%;
+  right: 2.5%;
+  display: block;
+  padding-right: 180px;
+  overflow: hidden;
+  color: #fff;
+  font-weight: 700;
+  font-size: 0.6rem;
+  font-family: Montserrat, sans-serif;
+  line-height: 1.2;
+  -webkit-transform: rotate(90deg) translate(0%, -100%);
+  -ms-transform: rotate(90deg) translate(0%, -100%);
+  transform: rotate(90deg) translate(0%, -100%);
+  -webkit-transform-origin: top right;
+  -ms-transform-origin: top right;
+  transform-origin: top right;
+  letter-spacing: 0.3em;
+  @include media-breakpoint-down(md) {
+    right: 8%;
+  }
   &::after {
     position: absolute;
     right: 0;
