--- a/src/assets/css/helps/_utilities.scss
+++ b/src/assets/css/helps/_utilities.scss
@@ -59,10 +59,12 @@ $utilities: map-merge(
     ),
     "top": (
       property: top,
+      responsive: true,
       values: $position-values
     ),
     "bottom": (
       property: bottom,
+      responsive: true,
       values: $position-values
     ),
     "start": (
@@ -72,6 +74,7 @@ $utilities: map-merge(
     ),
     "end": (
       property: right,
+      responsive: true,
       class: end,
       values: $position-values
     ),
