--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -13,4 +13,5 @@
 @import "./components/animation";
 @import "./components/top";
 @import "./components/navtop";
+@import "./components/section";
 @import "./components/login";
