--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -14,4 +14,5 @@
 @import "./components/top";
 @import "./components/navtop";
 @import "./components/section";
+@import "./components/table";
 @import "./components/login";
