topnavbar error 細節調整

--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -92,3 +92,14 @@
 .content-user {
   padding-top: 120.75px;
 }
+
+.navbar-brand {
+  & img {
+    transition: .2s opacity;
+  }
+  &:hover {
+    & img {
+      opacity: .75;
+    }
+  }
+}
