產品分類 與 相近產品 功能追加

--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -91,3 +91,10 @@
 .content-user {
   padding-top: 120.75px;
 }
+
+.stretched-link {
+  transition: 0.3s all;
+  &:hover {
+    opacity: 0.8;
+  }
+}
