單一文章頁面新增(途中

--- a/src/assets/css/helps/_utilities.scss
+++ b/src/assets/css/helps/_utilities.scss
@@ -412,7 +412,8 @@ $utilities: map-merge(
         map-merge(
           $spacers,
           (
-            auto: auto
+            auto: auto,
+            25: 25%
           )
         )
     ),
