第一次提交前修正

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -15,4 +15,5 @@
 @import "./components/navtop";
 @import "./components/section";
 @import "./components/table";
+@import "./components/img";
 @import "./components/login";
