--- a/src/assets/css/helps/_variables.scss
+++ b/src/assets/css/helps/_variables.scss
@@ -1379,9 +1379,9 @@ $breadcrumb-padding-y:              12px !default;
 $breadcrumb-padding-x:              1.5% !default;
 $breadcrumb-item-padding-x:         .5rem !default;
 $breadcrumb-margin-bottom:          0 !default;
-$breadcrumb-bg:                     #f5f5f5 !default;
-$breadcrumb-divider-color:          $gray-600 !default;
-$breadcrumb-active-color:           $gray-600 !default;
+$breadcrumb-bg:                     $gray-600 !default;
+$breadcrumb-divider-color:          $gray-100 !default;
+$breadcrumb-active-color:           $gray-100 !default;
 $breadcrumb-divider:                quote(">") !default;
 $breadcrumb-divider-flipped:        $breadcrumb-divider !default;
 $breadcrumb-border-radius:          null !default;
