--- a/src/assets/css/helps/_variables.scss
+++ b/src/assets/css/helps/_variables.scss
@@ -480,6 +480,7 @@ $font-sizes: (
   5: $h5-font-size,
   6: $h6-font-size,
   7: $font-size-base *.75,
+  8: $font-size-base *.6,
 ) !default;
 // scss-docs-end font-sizes
 
