--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -16,4 +16,5 @@
 @import "./components/section";
 @import "./components/table";
 @import "./components/img";
+@import "./components/pagination";
 @import "./components/login";
