--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -158,12 +158,11 @@
 
 .card-articles {
   border: none;
+  margin-bottom: 1rem;
 }
 
 .card-articles__date {
-  position: absolute;
-  bottom: .5rem;
-  left: 1rem;
+
 }
 
 .goods-detail-description {
