--- a/src/assets/css/components/_navtop.scss
+++ b/src/assets/css/components/_navtop.scss
@@ -96,3 +96,12 @@
     z-index: 2;
   }
 }
+
+.nav-products__lists.article-list {
+  flex-wrap: wrap;
+  & .nav-products__list {
+    width: 100%;
+    margin-bottom: 1rem;
+    min-height: 60px;
+  }
+}
