--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -111,6 +111,22 @@
   background-attachment: fixed;
 }
 
+.bg-cover--03 {
+  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/leolee/1627065613627.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=gibCcLdDQW7tIodZgnyMtY3yDYnnTMPUYosZjTChDaUxKmHFk%2Bif8D4ac9SYCU6ZKxZ4w5GucBHldLafxeJiLrWf4l18cmOJg5hSWX875sCXb8z60AYFW6IZ5L3LbEWfglGWSOW7dabOjxVk8RhzX7Svyx1j86IUUgp2pDjWJpyG9GPB6w8DTLim7XEWr5F8G%2Bxh9kQaC8nzJzYx5EbvZgK4VEpcHOnEpwoD8LNxOITZvkT%2BpDn0syX671sue5pkO%2FyZQZ9as%2BXBaBeG7Ri2Lf6Mv5rQhOe8NKxtevrwCEgy4%2BawYMdk3ObHmu5vqGwWJMr%2FUrmlKI1SUcj1P%2Fln3w%3D%3D);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.bg-cover--04 {
+  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/leolee/1627009167290.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=d47oEgkjYobDvaGOqpvtr1EZY6qsOipqXRxNz7M3rEjI2NFoqqbW%2BLodox5z%2Fjm0MpqrsGEnVx9EGYcx%2FnDsNIGJxmUQasxN31e2xVV3sZfa3TMwKPGSicjQAQzn3RsxhDHerUPS%2FOQJXau1ejaWUMqUFLLQqQzrWqckka4PVlDyAC897qFortl5dE64MLgLjt70bFnUojolbe8g09nyfJXni2i1x5h2NghoGDL5d044VYD%2BZGviWLkuhnp83xlP3kIdod50olA%2FAdnE5LE0K4lEsDo%2B5A543x%2FU6RMfw0A%2FDFx3rjSiqK8vGJeC%2B3SnDEvAcWN2TnZc3pcJMR%2BBag%3D%3D);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 20%;
+  background-attachment: fixed;
+}
+
 .bg-01 {
   background: linear-gradient(
     to bottom,
