--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -135,6 +135,10 @@
   );
 }
 
+.bg-opacity {
+  background: rgba(255, 255, 255, 0.85);
+}
+
 .breadcrumb {
   background-color: rgba(108, 117, 125, 0.9);
   padding-right: var(--bs-gutter-x, 0.75rem);
@@ -218,4 +222,8 @@
 .article-post {
   padding: 20px;
   background: rgba(255, 255, 255, 0.85);
+}
+
+.cart-detail-list {
+  
 }
