--- a/src/assets/css/components/_navtop.scss
+++ b/src/assets/css/components/_navtop.scss
@@ -105,3 +105,19 @@
     min-height: 60px;
   }
 }
+
+.nav-products__lists.cart-list {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 0 1rem;
+  & .nav-products__list {
+    max-width: 49%;
+    flex: 1 1 49%;
+    margin: 0;
+    margin-bottom: 10px;
+    @include media-breakpoint-down(sm) {
+      max-width: 100%;
+      flex: 1 1 100%;
+    }
+  }
+}
