・修改與調整收藏清單設計 ・新增問與答至 About 頁面最下方

--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -227,3 +227,13 @@
 .cart-detail-list {
   
 }
+
+.accordion-button {
+  font-weight: bold;
+  border-radius: 0rem!important;
+}
+
+.accordion-item {
+  margin: 1rem 0;
+  border: none;
+}
